--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JavaScript</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- <script src="script.js"></script> -->
-  <script type="module" src="script.js"></script>
-  <!-- <script  src="/socket.io/socket.io.js"></script> -->
-  <script src="https://cdn.socket.io/4.5.1/socket.io.min.js"></script>
-  <!-- <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script> -->
+  <title>Hello WebSocket</title>
+  <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+          integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+          crossorigin="anonymous"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+
+  <script src="/script.js"></script>
+
+
 </head>
 <body>
-    <div class="box">
-      <label for="result">result</label>
-      <div>
-        <textarea id="result" name="result" type="text" rows="30" cols="100"></textarea>
-        <button id="resultBtn">
-            <br /> result
+<noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
+  enabled. Please enable
+  Javascript and reload this page!</h2></noscript>
+<div id="main-content" class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <form class="form-inline">
+        <div class="form-group">
+          <label for="clientId">What is your Cient Id?</label>
+          <input type="text" id="clientId" class="form-control" placeholder="Your Client Id here...">
+          <br>
+          <label for="connect">WebSocket connection:</label>
+          <button id="connect" class="btn btn-default" type="submit">Connect</button>
+          <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect
           </button>
-      </div>
-
-    <!-- <script type="importmap">
-      {
-        "imports": {
-          "socket.io-client": "https://cdn.socket.io/4.4.1/socket.io.esm.min.js"
-        }
-      }
-    </script> -->
-    
+        </div>
+      </form>
+    </div>
+    <div class="col-md-6">
+      <form class="form-inline">
+        <div class="form-group">
+          <label for="message">What is your message?</label>
+          <input type="text" id="message" class="form-control" placeholder="Your message here...">
+        </div>
+        <button id="send" class="btn btn-default" type="submit">Send Message</button>
+      </form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <table id="conversation" class="table table-striped">
+        <thead>
+        <tr>
+          <th>Messages</th>
+        </tr>
+        </thead>
+        <tbody id="messages">
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 </body>
 </html>
