--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,9 @@
   <script type="module" src="script.js"></script>
   <!-- <script  src="/socket.io/socket.io.js"></script> -->
   <script src="https://cdn.socket.io/4.5.1/socket.io.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+          integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+          crossorigin="anonymous"></script>
   <!-- <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script> -->
 </head>
 <body>
@@ -20,6 +23,46 @@
         <button id="resultBtn">
             <br /> result
           </button>
+      </div>
+
+
+
+      <div class="row">
+        <div class="col-md-6">
+          <form class="form-inline">
+            <div class="form-group">
+              <label for="clientId">What is your Cient Id?</label>
+              <input type="text" id="clientId" class="form-control" placeholder="Your Client Id here...">
+              <br>
+              <label for="connect">WebSocket connection:</label>
+              <button id="connect" class="btn btn-default" type="submit">Connect</button>
+              <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="col-md-6">
+          <form class="form-inline">
+            <div class="form-group">
+              <label for="message">What is your message?</label>
+              <input type="text" id="message" class="form-control" placeholder="Your message here...">
+            </div>
+            <button id="send" class="btn btn-default" type="submit">Send Message</button>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <table id="conversation" class="table table-striped">
+            <thead>
+            <tr>
+              <th>Messages</th>
+            </tr>
+            </thead>
+            <tbody id="messages">
+            </tbody>
+          </table>
+        </div>
       </div>
 
     <!-- <script type="importmap">
